--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Parstagram">
+        android:theme="@style/Theme.Parstagram"
+        android:usesCleartextTraffic="true">
 
         <!-- make sure within the application tag, otherwise app will crash with XmlResourceParser errors -->
         <provider
